--- a/src/backend/deepsleep/config.yaml
+++ b/src/backend/deepsleep/config.yaml
@@ -11,28 +11,34 @@ langfuse:
   secret_key:
   user_id: "tian_chat"
 
+# 根据自己的LLM配置进行更改
 llm:
-  api_key: ''
+  api_key: ""
   base_url: "https://dashscope.aliyuncs.com/compatible-mode/v1"
   model_name: "qwen-plus"
 
+# 根据自己的Embedding配置进行更改
 embedding:
   api_key: ""
   base_url: ""
   model_name: ""
 
+# 根据自己的Rerank配置进行更改
 rerank:
   api_key: ""
   model_name: ""
   base_url: ""
 
+# 使用的是aliyun上的快递查询api
 tool_delivery:
   api_key: ""
   base_url: "https://qyexpress.market.alicloudapi.com/composite/queryexpress"
 
+# 使用的是serpapi上的Google Search的api
 tool_google:
   api_key: "xxx"
 
+# 使用高德地图上的天气api
 tool_weather:
   api_key: ""
   base_url: "https://restapi.amap.com/v3/weather/weatherInfo?parameters"
@@ -40,26 +46,29 @@ tool_weather:
 redis:
   endpoint: "redis://localhost:6379"
 
+# 根据自己的MySQL配置更改：mysql+pymysql://账号（root）:账号密码（123456）@主机地址（localhost）:端口号（3306）/数据库名
 mysql:
   endpoint: "mysql+pymysql://root:mingguang0703@localhost:3306/agentchat"
 
-split:
-  chunk_size:
-  overlap_size:
 
+# milvus根据自己的配置更改
 milvus:
   host: "localhost"
   port: "19530"
 
 elasticsearch:
   hosts: "http://localhost:9200"
-  index_config_path:
-  index_search_summary_path:
-  index_search_content_path:
+  index_config_path: "deepsleep/data/index_config.json"
+  index_search_summary_path: "deepsleep/data/index_search_content.json"
+  index_search_content_path: "deepsleep/data/index_search_summary.json"
 
 rag:
-  top_k:
-  min_score:
+  top_k: 5  # 知识库召回的数量
+  min_score: 0.4 # 知识库召回的最小分数
+
+split:
+  chunk_size: 500 # 知识库片段的最大字符数
+  overlap_size: 100 # 知识库片段之间的重复字符
 
 logo:
   tool: "img/tool/tool.png"
@@ -75,5 +84,5 @@ oss:
   base_url: "https://agentchat.oss-cn-beijing.aliyuncs.com"
 
 
-use_captcha: True
-use_oss: False
+use_captcha: False # 用户登录是否需要验证码
+use_oss: False  # 是否开启OSS
